   müssen in einem Verzeichnis sein und im Dateinamen muss die AHV Nr vorhanden sein. Es
   darf aber auch noch Zugemüse im Dateinamen sein. Jedes Bild welches importiert wird
   muss im Dialog akzeptiert werden und neue Bilder müssen direkt zugeschnitten werden.
   Im Dialog wird ein Log geschrieben, damit nachvollziehbar ist, was passiert.

Technische Verbesserungen:
#33 Maven-Build: Korrekte Verwendung der Versionierungsinformationen
#37 Entwicklung: Projekt komplett auf UTF-8 umgestellt. Fördert die
   plattformunbhängige Entwikcklung.
#38 Maven-Build: Entfernung der SUN-Abhängigkeiten beim WSGen (Webservice 
   Generierung). Die Klassen sind mittlerweile im Core (JDK).
#49 Abhängigkeiten aktualisiert: guava 18.0 junit 4.12

/***************************************/
 Version 0.8.2
/***************************************/
- Shutdown Hook für Client
- Volltext Suche auf Filter Tabellen erweitert. Ein Leerschlag bedeutet, dass eine AND-Verknüpfung
  gemacht wird.
  
/***************************************/
 Version 0.8.1
/***************************************/
- Beim Druck eines Ausweises ist die Dimensions des Personen Fotos für das Wasserzeichen 
nicht mehr relevant.

/***************************************/
 Version 0.8.0
/***************************************/
- PISA Import optimiert.
   --Automatische Erkennung der Tabellenspalten. Erkennung zwischen Geburtsdatum,
   Grad, AHV-Nr und anderen Text-Attributen.
   --Anzeigen der Änderungen, welche durch den Import verursacht werden. Es wird
   zwischen "Person archivieren", "Person aktualisieren", "Person aktualisieren
   und neuer Ausweis" und "neue Person" unterschieden.
   --Möglichkeit, dass einzelne Änderungen deaktiviert werden können.
   --Es können Excel (xls, xlsx), sowie CSV Dateien importiert werden.

- Hauptansicht mit Sliders ausgerüstet. 
- Hauptansicht sowie Einstellungsansicht startet im Full-Screen Modus.

- Gefechtsmeldungen können erstellt werden. Die Gefechtsmeldungen können für eine